set an event sink on the control connection's socket transport, and forward "looking up host", "connecting to host" and "connected to host" events to the progress sink. Bug 252344 r=darin sr=bz